--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<h1 class="display-4 text-primary text-center">Simple HTML Website</h1>
-		<div class="conatiner bg-dark text-white text-center">
+		<div class="container bg-dark text-white text-center">
 			<img src="Studying man.gif" class="rounded rounded-circle img-thumbnail" alt="Me" height="400" width="400" />
 			<h1>My Name is Avinash</h1>
 			<p>I study in class 8th</p>
